// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProofRequesting Component generate new qr works correctly 1`] = `
<RNCSafeAreaView
  edges={
    Array [
      "left",
      "right",
    ]
  }
  style={
    Object {
      "backgroundColor": "#FFFFFF",
      "flexGrow": 1,
    }
  }
>
  <RCTScrollView>
    <View>
      <View
        style={
          Object {
            "alignItems": "center",
            "height": 730,
            "justifyContent": "center",
            "marginHorizontal": 10,
            "marginTop": 15,
            "width": 730,
          }
        }
      >
        <View
          style={
            Object {
              "alignItems": "center",
              "justifyContent": "center",
            }
          }
          testID="com.ariesbifold:id/LoadingActivityIndicator"
        >
          <Image
            source={
              Object {
                "default": "",
              }
            }
            style={
              Object {
                "height": "33%",
                "width": "33%",
              }
            }
            testID="com.ariesbifold:id/LoadingActivityIndicatorImage"
          />
          <View
            collapsable={false}
            nativeID="animatedComponent"
            style={
              Object {
                "position": "absolute",
                "transform": Array [
                  Object {
                    "rotate": "0deg",
                  },
                ],
              }
            }
          >
            <
              fill="#FFFFFF"
              height={200}
              width={200}
            />
          </View>
        </View>
      </View>
      <View
        style={
          Object {
            "alignItems": "center",
            "marginHorizontal": 30,
            "padding": 16,
            "textAlign": "center",
          }
        }
      >
        <Text
          style={
            Object {
              "color": "#000000",
              "fontSize": 28,
              "fontWeight": "bold",
              "textAlign": "center",
            }
          }
        >
          Verifier.ScanQR
        </Text>
        <Text
          style={
            Object {
              "color": "#000000",
              "fontSize": 20,
              "fontWeight": "normal",
              "marginTop": 8,
              "textAlign": "center",
            }
          }
        >
          Verifier.ScanQRComment
        </Text>
      </View>
    </View>
  </RCTScrollView>
  <View
    style={
      Object {
        "marginHorizontal": 20,
        "marginTop": "auto",
      }
    }
  >
    <View
      style={
        Object {
          "marginBottom": 10,
        }
      }
    >
      <View
        accessibilityLabel="Verifier.RefreshQR"
        accessibilityRole="button"
        accessibilityState={
          Object {
            "disabled": true,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        nativeID="animatedComponent"
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "backgroundColor": "rgba(53, 130, 63, 0.35)",
            "borderRadius": 4,
            "opacity": 1,
            "padding": 16,
          }
        }
        testID="com.ariesbifold:id/GenerateNewQR"
      >
        <View
          style={
            Object {
              "alignItems": "center",
              "flexDirection": "row",
              "justifyContent": "center",
            }
          }
        >
          <Text
            style={
              Array [
                Object {
                  "color": "#FFFFFF",
                  "fontSize": 18,
                  "fontWeight": "bold",
                  "textAlign": "center",
                },
                Object {
                  "color": "#FFFFFF",
                  "fontSize": 18,
                  "fontWeight": "bold",
                  "textAlign": "center",
                },
                false,
                false,
              ]
            }
          >
            Verifier.RefreshQR
          </Text>
        </View>
      </View>
    </View>
  </View>
</RNCSafeAreaView>
`;

exports[`ProofRequesting Component renders correctly 1`] = `
<RNCSafeAreaView
  edges={
    Array [
      "left",
      "right",
    ]
  }
  style={
    Object {
      "backgroundColor": "#FFFFFF",
      "flexGrow": 1,
    }
  }
>
  <RCTScrollView>
    <View>
      <View
        style={
          Object {
            "alignItems": "center",
            "height": 730,
            "justifyContent": "center",
            "marginHorizontal": 10,
            "marginTop": 15,
            "width": 730,
          }
        }
      >
        <View
          style={
            Object {
              "alignItems": "center",
              "justifyContent": "center",
            }
          }
          testID="com.ariesbifold:id/LoadingActivityIndicator"
        >
          <Image
            source={
              Object {
                "default": "",
              }
            }
            style={
              Object {
                "height": "33%",
                "width": "33%",
              }
            }
            testID="com.ariesbifold:id/LoadingActivityIndicatorImage"
          />
          <View
            collapsable={false}
            nativeID="animatedComponent"
            style={
              Object {
                "position": "absolute",
                "transform": Array [
                  Object {
                    "rotate": "0deg",
                  },
                ],
              }
            }
          >
            <
              fill="#FFFFFF"
              height={200}
              width={200}
            />
          </View>
        </View>
      </View>
      <View
        style={
          Object {
            "alignItems": "center",
            "marginHorizontal": 30,
            "padding": 16,
            "textAlign": "center",
          }
        }
      >
        <Text
          style={
            Object {
              "color": "#000000",
              "fontSize": 28,
              "fontWeight": "bold",
              "textAlign": "center",
            }
          }
        >
          Verifier.ScanQR
        </Text>
        <Text
          style={
            Object {
              "color": "#000000",
              "fontSize": 20,
              "fontWeight": "normal",
              "marginTop": 8,
              "textAlign": "center",
            }
          }
        >
          Verifier.ScanQRComment
        </Text>
      </View>
    </View>
  </RCTScrollView>
  <View
    style={
      Object {
        "marginHorizontal": 20,
        "marginTop": "auto",
      }
    }
  >
    <View
      style={
        Object {
          "marginBottom": 10,
        }
      }
    >
      <View
        accessibilityLabel="Verifier.RefreshQR"
        accessibilityRole="button"
        accessibilityState={
          Object {
            "disabled": true,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        nativeID="animatedComponent"
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "backgroundColor": "rgba(53, 130, 63, 0.35)",
            "borderRadius": 4,
            "opacity": 1,
            "padding": 16,
          }
        }
        testID="com.ariesbifold:id/GenerateNewQR"
      >
        <View
          style={
            Object {
              "alignItems": "center",
              "flexDirection": "row",
              "justifyContent": "center",
            }
          }
        >
          <Text
            style={
              Array [
                Object {
                  "color": "#FFFFFF",
                  "fontSize": 18,
                  "fontWeight": "bold",
                  "textAlign": "center",
                },
                Object {
                  "color": "#FFFFFF",
                  "fontSize": 18,
                  "fontWeight": "bold",
                  "textAlign": "center",
                },
                false,
                false,
              ]
            }
          >
            Verifier.RefreshQR
          </Text>
        </View>
      </View>
    </View>
  </View>
</RNCSafeAreaView>
`;

exports[`ProofRequesting Component renders correctly 2`] = `
<RNCSafeAreaView
  edges={
    Array [
      "left",
      "right",
    ]
  }
  style={
    Object {
      "backgroundColor": "#FFFFFF",
      "flexGrow": 1,
    }
  }
>
  <RCTScrollView>
    <View>
      <View
        style={
          Object {
            "alignItems": "center",
            "height": 730,
            "justifyContent": "center",
            "marginHorizontal": 10,
            "marginTop": 15,
            "width": 730,
          }
        }
      />
      <View
        style={
          Object {
            "alignItems": "center",
            "marginHorizontal": 30,
            "padding": 16,
            "textAlign": "center",
          }
        }
      >
        <Text
          style={
            Object {
              "color": "#000000",
              "fontSize": 28,
              "fontWeight": "bold",
              "textAlign": "center",
            }
          }
        >
          Verifier.ScanQR
        </Text>
        <Text
          style={
            Object {
              "color": "#000000",
              "fontSize": 20,
              "fontWeight": "normal",
              "marginTop": 8,
              "textAlign": "center",
            }
          }
        >
          Verifier.ScanQRComment
        </Text>
      </View>
    </View>
  </RCTScrollView>
  <View
    style={
      Object {
        "marginHorizontal": 20,
        "marginTop": "auto",
      }
    }
  >
    <View
      style={
        Object {
          "marginBottom": 10,
        }
      }
    >
      <View
        accessibilityLabel="Verifier.RefreshQR"
        accessibilityRole="button"
        accessibilityState={
          Object {
            "disabled": false,
          }
        }
        accessible={true}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "backgroundColor": "#42803E",
            "borderRadius": 4,
            "opacity": 1,
            "padding": 16,
          }
        }
        testID="com.ariesbifold:id/GenerateNewQR"
      >
        <View
          style={
            Object {
              "alignItems": "center",
              "flexDirection": "row",
              "justifyContent": "center",
            }
          }
        >
          <Text
            style={
              Array [
                Object {
                  "color": "#FFFFFF",
                  "fontSize": 18,
                  "fontWeight": "bold",
                  "textAlign": "center",
                },
                false,
                false,
                false,
              ]
            }
          >
            Verifier.RefreshQR
          </Text>
        </View>
      </View>
    </View>
  </View>
</RNCSafeAreaView>
`;
